// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> closes when swiping a little 1`] = `
<div>
  <div
    className="DrawerContainer"
  >
    <DrawerOverlay
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      open={false}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={0}
    />
    <DrawerContent
      drawerContent={<div />}
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={0}
      width={80}
    />
  </div>
  <div
    style={Object {}}
    toggleDrawer={[Function]}
  />
</div>
`;

exports[`<Drawer /> opens when swiping enough 1`] = `
<div>
  <div
    className="DrawerContainer"
  >
    <DrawerOverlay
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      open={true}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={100}
    />
    <DrawerContent
      drawerContent={<div />}
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={100}
      width={80}
    />
  </div>
  <div
    style={
      Object {
        "position": "fixed",
        "top": -0,
      }
    }
    toggleDrawer={[Function]}
  />
</div>
`;

exports[`<Drawer /> swipes horizontally 1`] = `
<div>
  <div
    className="DrawerContainer"
  >
    <DrawerOverlay
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      open={true}
      swiping={true}
      toggleDrawer={[Function]}
      translateX={24.4140625}
    />
    <DrawerContent
      drawerContent={<div />}
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      swiping={true}
      toggleDrawer={[Function]}
      translateX={24.4140625}
      width={80}
    />
  </div>
  <div
    style={
      Object {
        "position": "fixed",
        "top": -0,
      }
    }
    toggleDrawer={[Function]}
  />
</div>
`;

exports[`<Drawer /> swipes vertically 1`] = `
<div>
  <div
    className="DrawerContainer"
  >
    <DrawerOverlay
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      open={false}
      swiping={true}
      toggleDrawer={[Function]}
      translateX={0}
    />
    <DrawerContent
      drawerContent={<div />}
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      swiping={true}
      toggleDrawer={[Function]}
      translateX={0}
      width={80}
    />
  </div>
  <div
    style={Object {}}
    toggleDrawer={[Function]}
  />
</div>
`;

exports[`<Drawer /> toggles close 1`] = `
<div>
  <div
    className="DrawerContainer"
  >
    <DrawerOverlay
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      open={false}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={0}
    />
    <DrawerContent
      drawerContent={<div />}
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={0}
      width={80}
    />
  </div>
  <div
    style={Object {}}
    toggleDrawer={[Function]}
  />
</div>
`;

exports[`<Drawer /> toggles open 1`] = `
<div>
  <div
    className="DrawerContainer"
  >
    <DrawerOverlay
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      open={true}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={100}
    />
    <DrawerContent
      drawerContent={<div />}
      handleTouchEnd={[Function]}
      handleTouchMove={[Function]}
      handleTouchStart={[Function]}
      swiping={false}
      toggleDrawer={[Function]}
      translateX={100}
      width={80}
    />
  </div>
  <div
    style={
      Object {
        "position": "fixed",
        "top": -0,
      }
    }
    toggleDrawer={[Function]}
  />
</div>
`;
